# gen_ai_project_scoresketch

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
docs/: INSTALL.md
humscribe/: DESIGN_NOTES.md  __init__.py  audio_io.py  config.py  notes.py  pipeline.py  post_process.py  score.py
reports/: FINAL_JOURNEY.md  FINAL_VERIFICATION.md  INDEX.md  PHASE_B_FINAL.md  PHASE_B_SUMMARY.md  PHASE_D_IDEAS.md  PHASE_D_INTEGRATION.md  PHASE_D_SUMMARY.md  PHASE_E_SESSION_SUMMARY.md  PHASE_E_v3_STRICT_SCORECARD.md  PHASE_F_IDEAS.md  PHASE_G_PROGRESS.md  PHASE_G_REGRESSION_CHECK.md  PHASE_G_STRICT_SCORECARD.md  SLIDE_CONTENT.md  _OOM_INCIDENTS.md  _eval_snap_tpb_cmp.json  _exp_B10_onset_bilstm_seed0_h64.json  _exp_B11_ensemble.json  _exp_B12_asap_multi.json  _exp_B14_maestro_instrument.json  _exp_B16_vt_sweep.json  _exp_B19_mel_bilstm_kfold5.json  _exp_B21_hmm_vt_sweep.json  _exp_B22_voc_extreme.json  _exp_B23_dp_sweep.json  _exp_B25_asap_multi_hmm.json  _exp_B26_voc_resweep.json  _exp_B33_dense_pesto.json  _exp_B34_basicpitch_voc_A1.json  _exp_B35_librosa.json  _exp_B36_pesto_pitch_crepe_voicing.json  _exp_B36b_higher_vt_A1.json  _exp_B36b_higher_vt_A2.json  _exp_B37_asap_diverse.json  _exp_B39_higher_psw.json  _exp_B40_mtg_qbh_hybrid.json  _exp_B42_bilstm_rich_k5_h192.json  _exp_B43_voicing_combos.json  _exp_B44_adaptive_vt.json  (+232 more)
scripts/: analyze_jsb_loss.py  analyze_me14_routing.py  bootstrap.sh  compare_svgs.py  count_tuplets_g11.py  curate_demos.py  debug_asap_rhythm.py  debug_asap_score_audio.py  (+148 more)
(+68 files in other folders)
