[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "humscribe"
version = "0.1.0"
description = "HumScribe v3.2 - humming/instrument audio to MusicXML/SVG"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["humscribe*"]
exclude = ["scripts*", "tests*"]
